Get working on Ubuntu 24.04

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "leia-laulja"
 version = "0.1.0"
 description = "Leiab Iseoma videost (https://www.teliatv.ee/saade/34368457/1/xxviii-laulupidu-iseoma-suurkontsert) kõik näod"
-requires-python = "==3.11.*"
+requires-python = ">=3.13"
 dependencies = [
     "insightface",
     "onnxruntime-gpu",
